# dm-job

./: .env-template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  generate-dmss-api.sh  pyproject.toml  release-please-config.json  reset-app.sh
.github/workflows/: codeql.yml  create-release-pr.yaml  docs.yml  on-main-push.yaml  on-master-push.yaml  on-push.yaml  on-tag.yaml  publish.yaml  stale.yml  tests.yaml
api/: pyproject.toml
api/src/: app.py  config.py
app/data/WorkflowDS/Blueprints/: AzureContainer.json  ComputeResource.json  Container.json  CronJob.json  Job.json  JobHandler.json  LocalContainer.json  Radix.json  RecurringJob.json  RecurringJobHandler.json  ReverseDescription.json  Shell.json  package.json
src/: app.py  config.py  conftest.py  init.sh  version.txt
src/default_job_handlers/local_shell/: __init__.py
src/default_job_handlers/omnia_classic_azure_container_instances/: __init__.py
src/default_job_handlers/recurring_job/: __init__.py
src/default_job_handlers/shell_script/: __init__.py
src/dmss_api/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
src/dmss_api/api/: __init__.py  access_control_api.py  blob_api.py  blueprint_api.py  datasource_api.py  default_api.py  document_api.py  entity_api.py  export_api.py  health_check_api.py  lookup_table_api.py  personal_access_token_api.py  reference_api.py  search_api.py  whoami_api.py
src/dmss_api/apis/: __init__.py
src/dmss_api/model/: access_level.py  acl.py  data_source_information.py  data_source_request.py  entity.py  error_response.py  get_blueprint_response.py  lookup.py  pat_data.py  recipe.py  recipe_attribute.py  reference.py  repository.py  repository_type.py  storage_attribute.py  storage_data_types.py  storage_recipe.py
src/dmss_api/models/: __init__.py
src/domain_classes/: progress.py
src/features/jobs/: jobs.py
src/features/jobs/use_cases/: delete_job.py  get_result_job.py  start_job.py  status_job.py  update_job_progress.py
src/job_handler_plugins/azure_container_instances/: __init__.py
src/job_handler_plugins/local_container/: __init__.py
src/job_handler_plugins/omnia_classic_azure_container_instances/: ARM_deployer.py  OmniaClassicContainerInstance.json  __init__.py
src/job_handler_plugins/radix/: README.md  __init__.py
src/job_handler_plugins/recurring_job/: __init__.py
src/job_handler_plugins/reverse_description/: __init__.py
src/restful/: exceptions.py  responses.py
src/services/: dmss.py  job_handler_interface.py  job_scheduler.py  job_service.py
src/tests/integration/: test_recurring_job.py  test_reverse_job.py
src/tests/unit_tests/: test_string_helpers.py
src/utils/: exception_handlers.py  get_extends_from.py  logging.py  string_helpers.py
