[tool.poetry]
name = "dm-job"
version="1.6.5"  # x-release-please-version
description = "REST API running jobs in development framework"
authors = ["Equinor <fg_team_hermes@equinor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.4"
redis = "^5.0.5"
APScheduler = "^3.10.4"
docker = "^7.1.0"
fastapi = "0.92.0"  # Migrate to pydantic V2 before upgrading
uvicorn = "^0.30.1"
azure-mgmt-containerinstance = "^10.1.0"
azure-mgmt-resource = "^23.1.1"
azure-identity = "^1.16.1"
dm-cli = "^1.7.1"
azure-monitor-opentelemetry = "^1.2.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pre-commit = "^3.3.3"
flake8 = "^5.0.4"
bandit = "^1.7.4"
black = "^22.6.0"
types-redis = "^4.3.21"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
plugins = [
    "pydantic.mypy"
]

[tool.pycln]
all=true

[tool.black]
line-length = 119
target-version = ['py10']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \dmss
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as integration test",
]
