[project]
name = "dm-job"
version = "1.6.8"  # x-release-please-version
description = "REST API running jobs in development framework"
authors = [ {name = "Equinor", email = "fg_team_hermes@equinor.com"}]
license = { text = "MIT" }

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
redis = "^7.2.1"
APScheduler = "^3.11.2"
docker = "^7.1.0"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
azure-mgmt-containerinstance = "^10.1.0"
azure-mgmt-resource = "^25.0.0"
azure-identity = "^1.25.2"
development-framework-cli = "^1.7.3"
azure-monitor-opentelemetry = "^1.8.6"
opentelemetry-instrumentation-fastapi = "0.60b0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pre-commit = "^4.5.1"
flake8 = "^7.3.0"
bandit = "^1.9.4"
black = "^26.3.1"
types-redis = "^4.6.0.20241004"
httpx = "^0.28.1"
icecream = "^2.1.10"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
plugins = [
    "pydantic.mypy"
]

[tool.pycln]
all=true

[tool.black]
line-length = 119
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \dmss
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as integration test",
]
